[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wkt"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pmembari", email = "parham.membari@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "shapely",
  "click",
  "pyproj",
  "pystac",
  "pystac-client",
]

[project.urls]
Documentation = "https://github.com/pmembari/wkt#readme"
Issues = "https://github.com/pmembari/wkt/issues"
Source = "https://github.com/pmembari/wkt"

[tool.hatch.version]
path = "src/wkt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wkt tests}"

[project.scripts]
wkt = "wkt.wkt:main"

[tool.coverage.run]
source_pkgs = ["wkt", "tests"]
branch = true
parallel = true
omit = [
  "src/wkt/__about__.py",
]

[tool.coverage.paths]
wkt = ["src/wkt", "*/wkt/src/wkt"]
tests = ["tests", "*/wkt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
