[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geowkt"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pmembari", email = "parham.membari@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "shapely",
  "click",
  "pyproj",
  "pystac",
  "pystac-client",
]

[project.urls]
Documentation = "https://github.com/pmembari/geowkt#readme"
Issues = "https://github.com/pmembari/geowkt/issues"
Source = "https://github.com/pmembari/geowkt"

[tool.hatch.version]
path = "src/geowkt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/geowkt tests}"

[project.scripts]
geowkt = "geowkt.wkt:main"

[tool.coverage.run]
source_pkgs = ["geowkt", "tests"]
branch = true
parallel = true
omit = [
  "src/geowkt/__about__.py",
]

[tool.coverage.paths]
geowkt = ["src/geowkt", "*/geowkt/src/geowkt"]
tests = ["tests", "*/geowkt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
